# Word2LaTeX

./: .gitignore  MEMORY.md  Mempack.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  mempack_test_report.md
examples/: Sujendra_Jayant_Gharat_Resume.docx  online_converter.tex  pagination_report.json  wordtolatex_output.tex
frontend/: package-lock.json
mempack_ingest_test/: .mempackignore  ignored.mempack  include.txt  long.txt
research/: Brainstorming.md  Brainstorming_v2.md  Brainstorming_v3.md  Brainstorming_v4.md  Brainstorming_v5.md  MVP_V1_PLAN.md  Research.md  Vision_Model_research.md
scripts/: calibrate_acm.py  check_ieee_font.py  check_overlay_stats.py  ci_corpus_check.py  compare_images.py  compare_layout.py  compare_models.py  debug_figures.py  generate_conflict_pdf.py  generate_dataset.py  generate_test_pdfs.py  image_diff.py  inspect_shapes.py  inspect_style.py  locate_headings.py  merge_doclaynet.py  nougat_compare.py  nougat_corpus.py  nougat_params.py  page_overlay.py  predict_v2.py  region_diff.py  run_corpus.py  structural_compare.py  test_gemini_connection.py  test_layout_models.py  text_compare.py  train_yolo.py  validate_corpus.py  verify_pdf_images.py  vision_oracle.py  visual_overlay.py
tests/: generators.py  output_dynamic.tex  output_header_fallback.aux  output_header_fallback.tex  output_local_llm.tex  output_local_llm_acm.tex  output_local_llm_custom_tuned.tex  output_local_llm_custom_tuned2.tex  output_local_llm_ieee.tex  output_local_llm_ms1.tex  output_local_llm_ms1_tuned.tex  output_local_llm_ms2_tuned.tex  output_local_llm_resume1_tuned.tex  output_local_llm_resume2.tex  output_v5_header_fallback.tex  output_v5_test.tex  (+18 more)
(+257 files in other folders)
